projet_GOCass/src/_build/default/parser.automaton
State 0:
file' -> . file [ # ]
-- On PACKAGE shift to state 1
-- On file shift to state 152

State 1:
file -> PACKAGE . ident_main SEMICOLON boption(import_fmt) list(decl) EOF [ # ]
-- On IDENT shift to state 2
-- On ident_main shift to state 3
-- On ident shift to state 151

State 2:
ident -> IDENT . [ VERTICALBARVERTICALBAR STRUCT STAR SLASH SEMICOLON RIGHTPAR RIGHTBRACE PLUSPLUS PLUS PERCENT MINUSMINUS MINUS LEFTPAR LEFTBRACE IDENT EQ DOT COMP COMMA COLONEQ AMPERSANDAMPERSAND ]
-- On VERTICALBARVERTICALBAR reduce production ident -> IDENT 
-- On STRUCT reduce production ident -> IDENT 
-- On STAR reduce production ident -> IDENT 
-- On SLASH reduce production ident -> IDENT 
-- On SEMICOLON reduce production ident -> IDENT 
-- On RIGHTPAR reduce production ident -> IDENT 
-- On RIGHTBRACE reduce production ident -> IDENT 
-- On PLUSPLUS reduce production ident -> IDENT 
-- On PLUS reduce production ident -> IDENT 
-- On PERCENT reduce production ident -> IDENT 
-- On MINUSMINUS reduce production ident -> IDENT 
-- On MINUS reduce production ident -> IDENT 
-- On LEFTPAR reduce production ident -> IDENT 
-- On LEFTBRACE reduce production ident -> IDENT 
-- On IDENT reduce production ident -> IDENT 
-- On EQ reduce production ident -> IDENT 
-- On DOT reduce production ident -> IDENT 
-- On COMP reduce production ident -> IDENT 
-- On COMMA reduce production ident -> IDENT 
-- On COLONEQ reduce production ident -> IDENT 
-- On AMPERSANDAMPERSAND reduce production ident -> IDENT 

State 3:
file -> PACKAGE ident_main . SEMICOLON boption(import_fmt) list(decl) EOF [ # ]
-- On SEMICOLON shift to state 4

State 4:
file -> PACKAGE ident_main SEMICOLON . boption(import_fmt) list(decl) EOF [ # ]
-- On IMPORT shift to state 5
-- On import_fmt shift to state 8
-- On boption(import_fmt) shift to state 9
-- On TYPE reduce production boption(import_fmt) -> 
-- On FUNC reduce production boption(import_fmt) -> 
-- On EOF reduce production boption(import_fmt) -> 

State 5:
import_fmt -> IMPORT . STRING SEMICOLON [ TYPE FUNC EOF ]
-- On STRING shift to state 6

State 6:
import_fmt -> IMPORT STRING . SEMICOLON [ TYPE FUNC EOF ]
-- On SEMICOLON shift to state 7

State 7:
import_fmt -> IMPORT STRING SEMICOLON . [ TYPE FUNC EOF ]
-- On TYPE reduce production import_fmt -> IMPORT STRING SEMICOLON 
-- On FUNC reduce production import_fmt -> IMPORT STRING SEMICOLON 
-- On EOF reduce production import_fmt -> IMPORT STRING SEMICOLON 

State 8:
boption(import_fmt) -> import_fmt . [ TYPE FUNC EOF ]
-- On TYPE reduce production boption(import_fmt) -> import_fmt 
-- On FUNC reduce production boption(import_fmt) -> import_fmt 
-- On EOF reduce production boption(import_fmt) -> import_fmt 

State 9:
file -> PACKAGE ident_main SEMICOLON boption(import_fmt) . list(decl) EOF [ # ]
-- On TYPE shift to state 10
-- On FUNC shift to state 30
-- On list(decl) shift to state 147
-- On decl shift to state 149
-- On EOF reduce production list(decl) -> 

State 10:
decl -> TYPE . ident STRUCT LEFTBRACE loption(fields) RIGHTBRACE SEMICOLON [ TYPE FUNC EOF ]
-- On IDENT shift to state 2
-- On ident shift to state 11

State 11:
decl -> TYPE ident . STRUCT LEFTBRACE loption(fields) RIGHTBRACE SEMICOLON [ TYPE FUNC EOF ]
-- On STRUCT shift to state 12

State 12:
decl -> TYPE ident STRUCT . LEFTBRACE loption(fields) RIGHTBRACE SEMICOLON [ TYPE FUNC EOF ]
-- On LEFTBRACE shift to state 13

State 13:
decl -> TYPE ident STRUCT LEFTBRACE . loption(fields) RIGHTBRACE SEMICOLON [ TYPE FUNC EOF ]
-- On IDENT shift to state 2
-- On separated_nonempty_list(COMMA,ident) shift to state 14
-- On loption(fields) shift to state 19
-- On ids_and_type shift to state 22
-- On ident shift to state 24
-- On fields shift to state 29
-- On RIGHTBRACE reduce production loption(fields) -> 

State 14:
ids_and_type -> separated_nonempty_list(COMMA,ident) . type_expr [ SEMICOLON RIGHTPAR RIGHTBRACE COMMA ]
-- On STAR shift to state 15
-- On IDENT shift to state 2
-- On type_expr shift to state 18
-- On ident shift to state 17

State 15:
type_expr -> STAR . type_expr [ SEMICOLON RIGHTPAR RIGHTBRACE LEFTBRACE EQ COMMA ]
-- On STAR shift to state 15
-- On IDENT shift to state 2
-- On type_expr shift to state 16
-- On ident shift to state 17

State 16:
type_expr -> STAR type_expr . [ SEMICOLON RIGHTPAR RIGHTBRACE LEFTBRACE EQ COMMA ]
-- On SEMICOLON reduce production type_expr -> STAR type_expr 
-- On RIGHTPAR reduce production type_expr -> STAR type_expr 
-- On RIGHTBRACE reduce production type_expr -> STAR type_expr 
-- On LEFTBRACE reduce production type_expr -> STAR type_expr 
-- On EQ reduce production type_expr -> STAR type_expr 
-- On COMMA reduce production type_expr -> STAR type_expr 

State 17:
type_expr -> ident . [ SEMICOLON RIGHTPAR RIGHTBRACE LEFTBRACE EQ COMMA ]
-- On SEMICOLON reduce production type_expr -> ident 
-- On RIGHTPAR reduce production type_expr -> ident 
-- On RIGHTBRACE reduce production type_expr -> ident 
-- On LEFTBRACE reduce production type_expr -> ident 
-- On EQ reduce production type_expr -> ident 
-- On COMMA reduce production type_expr -> ident 

State 18:
ids_and_type -> separated_nonempty_list(COMMA,ident) type_expr . [ SEMICOLON RIGHTPAR RIGHTBRACE COMMA ]
-- On SEMICOLON reduce production ids_and_type -> separated_nonempty_list(COMMA,ident) type_expr 
-- On RIGHTPAR reduce production ids_and_type -> separated_nonempty_list(COMMA,ident) type_expr 
-- On RIGHTBRACE reduce production ids_and_type -> separated_nonempty_list(COMMA,ident) type_expr 
-- On COMMA reduce production ids_and_type -> separated_nonempty_list(COMMA,ident) type_expr 

State 19:
decl -> TYPE ident STRUCT LEFTBRACE loption(fields) . RIGHTBRACE SEMICOLON [ TYPE FUNC EOF ]
-- On RIGHTBRACE shift to state 20

State 20:
decl -> TYPE ident STRUCT LEFTBRACE loption(fields) RIGHTBRACE . SEMICOLON [ TYPE FUNC EOF ]
-- On SEMICOLON shift to state 21

State 21:
decl -> TYPE ident STRUCT LEFTBRACE loption(fields) RIGHTBRACE SEMICOLON . [ TYPE FUNC EOF ]
-- On TYPE reduce production decl -> TYPE ident STRUCT LEFTBRACE loption(fields) RIGHTBRACE SEMICOLON 
-- On FUNC reduce production decl -> TYPE ident STRUCT LEFTBRACE loption(fields) RIGHTBRACE SEMICOLON 
-- On EOF reduce production decl -> TYPE ident STRUCT LEFTBRACE loption(fields) RIGHTBRACE SEMICOLON 

State 22:
fields -> ids_and_type . option(SEMICOLON) [ RIGHTBRACE ]
fields -> ids_and_type . SEMICOLON fields [ RIGHTBRACE ]
-- On SEMICOLON shift to state 23
-- On option(SEMICOLON) shift to state 28
-- On RIGHTBRACE reduce production option(SEMICOLON) -> 

State 23:
fields -> ids_and_type SEMICOLON . fields [ RIGHTBRACE ]
option(SEMICOLON) -> SEMICOLON . [ RIGHTBRACE ]
-- On IDENT shift to state 2
-- On separated_nonempty_list(COMMA,ident) shift to state 14
-- On ids_and_type shift to state 22
-- On ident shift to state 24
-- On fields shift to state 27
-- On RIGHTBRACE reduce production option(SEMICOLON) -> SEMICOLON 

State 24:
separated_nonempty_list(COMMA,ident) -> ident . [ STAR SEMICOLON RIGHTBRACE IDENT EQ ]
separated_nonempty_list(COMMA,ident) -> ident . COMMA separated_nonempty_list(COMMA,ident) [ STAR SEMICOLON RIGHTBRACE IDENT EQ ]
-- On COMMA shift to state 25
-- On STAR reduce production separated_nonempty_list(COMMA,ident) -> ident 
-- On SEMICOLON reduce production separated_nonempty_list(COMMA,ident) -> ident 
-- On RIGHTBRACE reduce production separated_nonempty_list(COMMA,ident) -> ident 
-- On IDENT reduce production separated_nonempty_list(COMMA,ident) -> ident 
-- On EQ reduce production separated_nonempty_list(COMMA,ident) -> ident 

State 25:
separated_nonempty_list(COMMA,ident) -> ident COMMA . separated_nonempty_list(COMMA,ident) [ STAR SEMICOLON RIGHTBRACE IDENT EQ ]
-- On IDENT shift to state 2
-- On separated_nonempty_list(COMMA,ident) shift to state 26
-- On ident shift to state 24

State 26:
separated_nonempty_list(COMMA,ident) -> ident COMMA separated_nonempty_list(COMMA,ident) . [ STAR SEMICOLON RIGHTBRACE IDENT EQ ]
-- On STAR reduce production separated_nonempty_list(COMMA,ident) -> ident COMMA separated_nonempty_list(COMMA,ident) 
-- On SEMICOLON reduce production separated_nonempty_list(COMMA,ident) -> ident COMMA separated_nonempty_list(COMMA,ident) 
-- On RIGHTBRACE reduce production separated_nonempty_list(COMMA,ident) -> ident COMMA separated_nonempty_list(COMMA,ident) 
-- On IDENT reduce production separated_nonempty_list(COMMA,ident) -> ident COMMA separated_nonempty_list(COMMA,ident) 
-- On EQ reduce production separated_nonempty_list(COMMA,ident) -> ident COMMA separated_nonempty_list(COMMA,ident) 

State 27:
fields -> ids_and_type SEMICOLON fields . [ RIGHTBRACE ]
-- On RIGHTBRACE reduce production fields -> ids_and_type SEMICOLON fields 

State 28:
fields -> ids_and_type option(SEMICOLON) . [ RIGHTBRACE ]
-- On RIGHTBRACE reduce production fields -> ids_and_type option(SEMICOLON) 

State 29:
loption(fields) -> fields . [ RIGHTBRACE ]
-- On RIGHTBRACE reduce production loption(fields) -> fields 

State 30:
decl -> FUNC . ident LEFTPAR loption(parameters) RIGHTPAR loption(return_type) block SEMICOLON [ TYPE FUNC EOF ]
-- On IDENT shift to state 2
-- On ident shift to state 31

State 31:
decl -> FUNC ident . LEFTPAR loption(parameters) RIGHTPAR loption(return_type) block SEMICOLON [ TYPE FUNC EOF ]
-- On LEFTPAR shift to state 32

State 32:
decl -> FUNC ident LEFTPAR . loption(parameters) RIGHTPAR loption(return_type) block SEMICOLON [ TYPE FUNC EOF ]
-- On IDENT shift to state 2
-- On separated_nonempty_list(COMMA,ident) shift to state 14
-- On parameters shift to state 33
-- On loption(parameters) shift to state 34
-- On ids_and_type shift to state 143
-- On ident shift to state 24
-- On RIGHTPAR reduce production loption(parameters) -> 

State 33:
loption(parameters) -> parameters . [ RIGHTPAR ]
-- On RIGHTPAR reduce production loption(parameters) -> parameters 

State 34:
decl -> FUNC ident LEFTPAR loption(parameters) . RIGHTPAR loption(return_type) block SEMICOLON [ TYPE FUNC EOF ]
-- On RIGHTPAR shift to state 35

State 35:
decl -> FUNC ident LEFTPAR loption(parameters) RIGHTPAR . loption(return_type) block SEMICOLON [ TYPE FUNC EOF ]
-- On STAR shift to state 15
-- On LEFTPAR shift to state 36
-- On IDENT shift to state 2
-- On type_expr shift to state 43
-- On return_type shift to state 44
-- On loption(return_type) shift to state 45
-- On ident shift to state 17
-- On LEFTBRACE reduce production loption(return_type) -> 

State 36:
return_type -> LEFTPAR . return_types RIGHTPAR [ LEFTBRACE ]
-- On STAR shift to state 15
-- On IDENT shift to state 2
-- On type_expr shift to state 37
-- On return_types shift to state 41
-- On ident shift to state 17

State 37:
return_types -> type_expr . option(COMMA) [ RIGHTPAR ]
return_types -> type_expr . COMMA return_types [ RIGHTPAR ]
-- On COMMA shift to state 38
-- On option(COMMA) shift to state 40
-- On RIGHTPAR reduce production option(COMMA) -> 

State 38:
option(COMMA) -> COMMA . [ RIGHTPAR ]
return_types -> type_expr COMMA . return_types [ RIGHTPAR ]
-- On STAR shift to state 15
-- On IDENT shift to state 2
-- On type_expr shift to state 37
-- On return_types shift to state 39
-- On ident shift to state 17
-- On RIGHTPAR reduce production option(COMMA) -> COMMA 

State 39:
return_types -> type_expr COMMA return_types . [ RIGHTPAR ]
-- On RIGHTPAR reduce production return_types -> type_expr COMMA return_types 

State 40:
return_types -> type_expr option(COMMA) . [ RIGHTPAR ]
-- On RIGHTPAR reduce production return_types -> type_expr option(COMMA) 

State 41:
return_type -> LEFTPAR return_types . RIGHTPAR [ LEFTBRACE ]
-- On RIGHTPAR shift to state 42

State 42:
return_type -> LEFTPAR return_types RIGHTPAR . [ LEFTBRACE ]
-- On LEFTBRACE reduce production return_type -> LEFTPAR return_types RIGHTPAR 

State 43:
return_type -> type_expr . [ LEFTBRACE ]
-- On LEFTBRACE reduce production return_type -> type_expr 

State 44:
loption(return_type) -> return_type . [ LEFTBRACE ]
-- On LEFTBRACE reduce production loption(return_type) -> return_type 

State 45:
decl -> FUNC ident LEFTPAR loption(parameters) RIGHTPAR loption(return_type) . block SEMICOLON [ TYPE FUNC EOF ]
-- On LEFTBRACE shift to state 46
-- On block shift to state 141

State 46:
block -> LEFTBRACE . RIGHTBRACE [ SEMICOLON RIGHTBRACE ELSE ]
block -> LEFTBRACE . statements RIGHTBRACE [ SEMICOLON RIGHTBRACE ELSE ]
-- On VAR shift to state 47
-- On STRING shift to state 52
-- On STAR shift to state 53
-- On SEMICOLON shift to state 99
-- On RIGHTBRACE shift to state 138
-- On RETURN shift to state 100
-- On NIL shift to state 54
-- On MINUS shift to state 55
-- On LEFTPAR shift to state 56
-- On LEFTBRACE shift to state 46
-- On IF shift to state 102
-- On IDENT shift to state 2
-- On FOR shift to state 109
-- On CST shift to state 57
-- On BANG shift to state 58
-- On AMP shift to state 59
-- On stmt_desc shift to state 130
-- On stmt shift to state 131
-- On statements shift to state 139
-- On simple_stmt_desc shift to state 110
-- On simple_stmt shift to state 134
-- On separated_nonempty_list(COMMA,expr) shift to state 95
-- On if_stmt_desc shift to state 106
-- On if_stmt shift to state 135
-- On ident shift to state 60
-- On exprs shift to state 118
-- On expr_desc shift to state 65
-- On expr shift to state 123
-- On block shift to state 136

State 47:
stmt_desc -> VAR . separated_nonempty_list(COMMA,ident) option(type_expr) loption(init) [ SEMICOLON RIGHTBRACE ]
-- On IDENT shift to state 2
-- On separated_nonempty_list(COMMA,ident) shift to state 48
-- On ident shift to state 24

State 48:
stmt_desc -> VAR separated_nonempty_list(COMMA,ident) . option(type_expr) loption(init) [ SEMICOLON RIGHTBRACE ]
-- On STAR shift to state 15
-- On IDENT shift to state 2
-- On type_expr shift to state 49
-- On option(type_expr) shift to state 50
-- On ident shift to state 17
-- On SEMICOLON reduce production option(type_expr) -> 
-- On RIGHTBRACE reduce production option(type_expr) -> 
-- On EQ reduce production option(type_expr) -> 

State 49:
option(type_expr) -> type_expr . [ SEMICOLON RIGHTBRACE EQ ]
-- On SEMICOLON reduce production option(type_expr) -> type_expr 
-- On RIGHTBRACE reduce production option(type_expr) -> type_expr 
-- On EQ reduce production option(type_expr) -> type_expr 

State 50:
stmt_desc -> VAR separated_nonempty_list(COMMA,ident) option(type_expr) . loption(init) [ SEMICOLON RIGHTBRACE ]
-- On EQ shift to state 51
-- On loption(init) shift to state 97
-- On init shift to state 98
-- On SEMICOLON reduce production loption(init) -> 
-- On RIGHTBRACE reduce production loption(init) -> 

State 51:
init -> EQ . exprs [ SEMICOLON RIGHTBRACE ]
-- On STRING shift to state 52
-- On STAR shift to state 53
-- On NIL shift to state 54
-- On MINUS shift to state 55
-- On LEFTPAR shift to state 56
-- On IDENT shift to state 2
-- On CST shift to state 57
-- On BANG shift to state 58
-- On AMP shift to state 59
-- On separated_nonempty_list(COMMA,expr) shift to state 95
-- On ident shift to state 60
-- On exprs shift to state 96
-- On expr_desc shift to state 65
-- On expr shift to state 66

State 52:
expr_desc -> STRING . [ VERTICALBARVERTICALBAR STAR SLASH SEMICOLON RIGHTPAR RIGHTBRACE PLUSPLUS PLUS PERCENT MINUSMINUS MINUS LEFTBRACE EQ DOT COMP COMMA COLONEQ AMPERSANDAMPERSAND ]
-- On VERTICALBARVERTICALBAR reduce production expr_desc -> STRING 
-- On STAR reduce production expr_desc -> STRING 
-- On SLASH reduce production expr_desc -> STRING 
-- On SEMICOLON reduce production expr_desc -> STRING 
-- On RIGHTPAR reduce production expr_desc -> STRING 
-- On RIGHTBRACE reduce production expr_desc -> STRING 
-- On PLUSPLUS reduce production expr_desc -> STRING 
-- On PLUS reduce production expr_desc -> STRING 
-- On PERCENT reduce production expr_desc -> STRING 
-- On MINUSMINUS reduce production expr_desc -> STRING 
-- On MINUS reduce production expr_desc -> STRING 
-- On LEFTBRACE reduce production expr_desc -> STRING 
-- On EQ reduce production expr_desc -> STRING 
-- On DOT reduce production expr_desc -> STRING 
-- On COMP reduce production expr_desc -> STRING 
-- On COMMA reduce production expr_desc -> STRING 
-- On COLONEQ reduce production expr_desc -> STRING 
-- On AMPERSANDAMPERSAND reduce production expr_desc -> STRING 

State 53:
expr_desc -> STAR . expr [ VERTICALBARVERTICALBAR STAR SLASH SEMICOLON RIGHTPAR RIGHTBRACE PLUSPLUS PLUS PERCENT MINUSMINUS MINUS LEFTBRACE EQ DOT COMP COMMA COLONEQ AMPERSANDAMPERSAND ]
-- On STRING shift to state 52
-- On STAR shift to state 53
-- On NIL shift to state 54
-- On MINUS shift to state 55
-- On LEFTPAR shift to state 56
-- On IDENT shift to state 2
-- On CST shift to state 57
-- On BANG shift to state 58
-- On AMP shift to state 59
-- On ident shift to state 60
-- On expr_desc shift to state 65
-- On expr shift to state 94

State 54:
expr_desc -> NIL . [ VERTICALBARVERTICALBAR STAR SLASH SEMICOLON RIGHTPAR RIGHTBRACE PLUSPLUS PLUS PERCENT MINUSMINUS MINUS LEFTBRACE EQ DOT COMP COMMA COLONEQ AMPERSANDAMPERSAND ]
-- On VERTICALBARVERTICALBAR reduce production expr_desc -> NIL 
-- On STAR reduce production expr_desc -> NIL 
-- On SLASH reduce production expr_desc -> NIL 
-- On SEMICOLON reduce production expr_desc -> NIL 
-- On RIGHTPAR reduce production expr_desc -> NIL 
-- On RIGHTBRACE reduce production expr_desc -> NIL 
-- On PLUSPLUS reduce production expr_desc -> NIL 
-- On PLUS reduce production expr_desc -> NIL 
-- On PERCENT reduce production expr_desc -> NIL 
-- On MINUSMINUS reduce production expr_desc -> NIL 
-- On MINUS reduce production expr_desc -> NIL 
-- On LEFTBRACE reduce production expr_desc -> NIL 
-- On EQ reduce production expr_desc -> NIL 
-- On DOT reduce production expr_desc -> NIL 
-- On COMP reduce production expr_desc -> NIL 
-- On COMMA reduce production expr_desc -> NIL 
-- On COLONEQ reduce production expr_desc -> NIL 
-- On AMPERSANDAMPERSAND reduce production expr_desc -> NIL 

State 55:
expr_desc -> MINUS . expr [ VERTICALBARVERTICALBAR STAR SLASH SEMICOLON RIGHTPAR RIGHTBRACE PLUSPLUS PLUS PERCENT MINUSMINUS MINUS LEFTBRACE EQ DOT COMP COMMA COLONEQ AMPERSANDAMPERSAND ]
-- On STRING shift to state 52
-- On STAR shift to state 53
-- On NIL shift to state 54
-- On MINUS shift to state 55
-- On LEFTPAR shift to state 56
-- On IDENT shift to state 2
-- On CST shift to state 57
-- On BANG shift to state 58
-- On AMP shift to state 59
-- On ident shift to state 60
-- On expr_desc shift to state 65
-- On expr shift to state 93

State 56:
expr_desc -> LEFTPAR . expr RIGHTPAR [ VERTICALBARVERTICALBAR STAR SLASH SEMICOLON RIGHTPAR RIGHTBRACE PLUSPLUS PLUS PERCENT MINUSMINUS MINUS LEFTBRACE EQ DOT COMP COMMA COLONEQ AMPERSANDAMPERSAND ]
-- On STRING shift to state 52
-- On STAR shift to state 53
-- On NIL shift to state 54
-- On MINUS shift to state 55
-- On LEFTPAR shift to state 56
-- On IDENT shift to state 2
-- On CST shift to state 57
-- On BANG shift to state 58
-- On AMP shift to state 59
-- On ident shift to state 60
-- On expr_desc shift to state 65
-- On expr shift to state 91

State 57:
expr_desc -> CST . [ VERTICALBARVERTICALBAR STAR SLASH SEMICOLON RIGHTPAR RIGHTBRACE PLUSPLUS PLUS PERCENT MINUSMINUS MINUS LEFTBRACE EQ DOT COMP COMMA COLONEQ AMPERSANDAMPERSAND ]
-- On VERTICALBARVERTICALBAR reduce production expr_desc -> CST 
-- On STAR reduce production expr_desc -> CST 
-- On SLASH reduce production expr_desc -> CST 
-- On SEMICOLON reduce production expr_desc -> CST 
-- On RIGHTPAR reduce production expr_desc -> CST 
-- On RIGHTBRACE reduce production expr_desc -> CST 
-- On PLUSPLUS reduce production expr_desc -> CST 
-- On PLUS reduce production expr_desc -> CST 
-- On PERCENT reduce production expr_desc -> CST 
-- On MINUSMINUS reduce production expr_desc -> CST 
-- On MINUS reduce production expr_desc -> CST 
-- On LEFTBRACE reduce production expr_desc -> CST 
-- On EQ reduce production expr_desc -> CST 
-- On DOT reduce production expr_desc -> CST 
-- On COMP reduce production expr_desc -> CST 
-- On COMMA reduce production expr_desc -> CST 
-- On COLONEQ reduce production expr_desc -> CST 
-- On AMPERSANDAMPERSAND reduce production expr_desc -> CST 

State 58:
expr_desc -> BANG . expr [ VERTICALBARVERTICALBAR STAR SLASH SEMICOLON RIGHTPAR RIGHTBRACE PLUSPLUS PLUS PERCENT MINUSMINUS MINUS LEFTBRACE EQ DOT COMP COMMA COLONEQ AMPERSANDAMPERSAND ]
-- On STRING shift to state 52
-- On STAR shift to state 53
-- On NIL shift to state 54
-- On MINUS shift to state 55
-- On LEFTPAR shift to state 56
-- On IDENT shift to state 2
-- On CST shift to state 57
-- On BANG shift to state 58
-- On AMP shift to state 59
-- On ident shift to state 60
-- On expr_desc shift to state 65
-- On expr shift to state 90

State 59:
expr_desc -> AMP . expr [ VERTICALBARVERTICALBAR STAR SLASH SEMICOLON RIGHTPAR RIGHTBRACE PLUSPLUS PLUS PERCENT MINUSMINUS MINUS LEFTBRACE EQ DOT COMP COMMA COLONEQ AMPERSANDAMPERSAND ]
-- On STRING shift to state 52
-- On STAR shift to state 53
-- On NIL shift to state 54
-- On MINUS shift to state 55
-- On LEFTPAR shift to state 56
-- On IDENT shift to state 2
-- On CST shift to state 57
-- On BANG shift to state 58
-- On AMP shift to state 59
-- On ident shift to state 60
-- On expr_desc shift to state 65
-- On expr shift to state 89

State 60:
expr_desc -> ident . [ VERTICALBARVERTICALBAR STAR SLASH SEMICOLON RIGHTPAR RIGHTBRACE PLUSPLUS PLUS PERCENT MINUSMINUS MINUS LEFTBRACE EQ DOT COMP COMMA COLONEQ AMPERSANDAMPERSAND ]
expr_desc -> ident . arguments [ VERTICALBARVERTICALBAR STAR SLASH SEMICOLON RIGHTPAR RIGHTBRACE PLUSPLUS PLUS PERCENT MINUSMINUS MINUS LEFTBRACE EQ DOT COMP COMMA COLONEQ AMPERSANDAMPERSAND ]
-- On LEFTPAR shift to state 61
-- On arguments shift to state 88
-- On VERTICALBARVERTICALBAR reduce production expr_desc -> ident 
-- On STAR reduce production expr_desc -> ident 
-- On SLASH reduce production expr_desc -> ident 
-- On SEMICOLON reduce production expr_desc -> ident 
-- On RIGHTPAR reduce production expr_desc -> ident 
-- On RIGHTBRACE reduce production expr_desc -> ident 
-- On PLUSPLUS reduce production expr_desc -> ident 
-- On PLUS reduce production expr_desc -> ident 
-- On PERCENT reduce production expr_desc -> ident 
-- On MINUSMINUS reduce production expr_desc -> ident 
-- On MINUS reduce production expr_desc -> ident 
-- On LEFTBRACE reduce production expr_desc -> ident 
-- On EQ reduce production expr_desc -> ident 
-- On DOT reduce production expr_desc -> ident 
-- On COMP reduce production expr_desc -> ident 
-- On COMMA reduce production expr_desc -> ident 
-- On COLONEQ reduce production expr_desc -> ident 
-- On AMPERSANDAMPERSAND reduce production expr_desc -> ident 

State 61:
arguments -> LEFTPAR . loption(separated_nonempty_list(COMMA,expr)) RIGHTPAR [ VERTICALBARVERTICALBAR STAR SLASH SEMICOLON RIGHTPAR RIGHTBRACE PLUSPLUS PLUS PERCENT MINUSMINUS MINUS LEFTBRACE EQ DOT COMP COMMA COLONEQ AMPERSANDAMPERSAND ]
-- On STRING shift to state 52
-- On STAR shift to state 53
-- On NIL shift to state 54
-- On MINUS shift to state 55
-- On LEFTPAR shift to state 56
-- On IDENT shift to state 2
-- On CST shift to state 57
-- On BANG shift to state 58
-- On AMP shift to state 59
-- On separated_nonempty_list(COMMA,expr) shift to state 62
-- On loption(separated_nonempty_list(COMMA,expr)) shift to state 63
-- On ident shift to state 60
-- On expr_desc shift to state 65
-- On expr shift to state 66
-- On RIGHTPAR reduce production loption(separated_nonempty_list(COMMA,expr)) -> 

State 62:
loption(separated_nonempty_list(COMMA,expr)) -> separated_nonempty_list(COMMA,expr) . [ SEMICOLON RIGHTPAR RIGHTBRACE ]
-- On SEMICOLON reduce production loption(separated_nonempty_list(COMMA,expr)) -> separated_nonempty_list(COMMA,expr) 
-- On RIGHTPAR reduce production loption(separated_nonempty_list(COMMA,expr)) -> separated_nonempty_list(COMMA,expr) 
-- On RIGHTBRACE reduce production loption(separated_nonempty_list(COMMA,expr)) -> separated_nonempty_list(COMMA,expr) 

State 63:
arguments -> LEFTPAR loption(separated_nonempty_list(COMMA,expr)) . RIGHTPAR [ VERTICALBARVERTICALBAR STAR SLASH SEMICOLON RIGHTPAR RIGHTBRACE PLUSPLUS PLUS PERCENT MINUSMINUS MINUS LEFTBRACE EQ DOT COMP COMMA COLONEQ AMPERSANDAMPERSAND ]
-- On RIGHTPAR shift to state 64

State 64:
arguments -> LEFTPAR loption(separated_nonempty_list(COMMA,expr)) RIGHTPAR . [ VERTICALBARVERTICALBAR STAR SLASH SEMICOLON RIGHTPAR RIGHTBRACE PLUSPLUS PLUS PERCENT MINUSMINUS MINUS LEFTBRACE EQ DOT COMP COMMA COLONEQ AMPERSANDAMPERSAND ]
-- On VERTICALBARVERTICALBAR reduce production arguments -> LEFTPAR loption(separated_nonempty_list(COMMA,expr)) RIGHTPAR 
-- On STAR reduce production arguments -> LEFTPAR loption(separated_nonempty_list(COMMA,expr)) RIGHTPAR 
-- On SLASH reduce production arguments -> LEFTPAR loption(separated_nonempty_list(COMMA,expr)) RIGHTPAR 
-- On SEMICOLON reduce production arguments -> LEFTPAR loption(separated_nonempty_list(COMMA,expr)) RIGHTPAR 
-- On RIGHTPAR reduce production arguments -> LEFTPAR loption(separated_nonempty_list(COMMA,expr)) RIGHTPAR 
-- On RIGHTBRACE reduce production arguments -> LEFTPAR loption(separated_nonempty_list(COMMA,expr)) RIGHTPAR 
-- On PLUSPLUS reduce production arguments -> LEFTPAR loption(separated_nonempty_list(COMMA,expr)) RIGHTPAR 
-- On PLUS reduce production arguments -> LEFTPAR loption(separated_nonempty_list(COMMA,expr)) RIGHTPAR 
-- On PERCENT reduce production arguments -> LEFTPAR loption(separated_nonempty_list(COMMA,expr)) RIGHTPAR 
-- On MINUSMINUS reduce production arguments -> LEFTPAR loption(separated_nonempty_list(COMMA,expr)) RIGHTPAR 
-- On MINUS reduce production arguments -> LEFTPAR loption(separated_nonempty_list(COMMA,expr)) RIGHTPAR 
-- On LEFTBRACE reduce production arguments -> LEFTPAR loption(separated_nonempty_list(COMMA,expr)) RIGHTPAR 
-- On EQ reduce production arguments -> LEFTPAR loption(separated_nonempty_list(COMMA,expr)) RIGHTPAR 
-- On DOT reduce production arguments -> LEFTPAR loption(separated_nonempty_list(COMMA,expr)) RIGHTPAR 
-- On COMP reduce production arguments -> LEFTPAR loption(separated_nonempty_list(COMMA,expr)) RIGHTPAR 
-- On COMMA reduce production arguments -> LEFTPAR loption(separated_nonempty_list(COMMA,expr)) RIGHTPAR 
-- On COLONEQ reduce production arguments -> LEFTPAR loption(separated_nonempty_list(COMMA,expr)) RIGHTPAR 
-- On AMPERSANDAMPERSAND reduce production arguments -> LEFTPAR loption(separated_nonempty_list(COMMA,expr)) RIGHTPAR 
